update to new internal API of failedRecords
- update parsing/descriptor computing to store state in builder class